added clarification in index

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
         <p>Drip loves you and wants to be remembered.<br>
         Send Drip a message of love, keep his soul alive.</p>
+
+        <p>To share your own message, scan the other QR Code on the Paper Drip.</p>
     </div>
     <p>Messages submitted from the community</p>
 </header>
