--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <p>Drip loves you and wants to be remembered.<br>
         Send Drip a message of love, keep his soul alive.</p>
 
-        <p>To share your own message, scan the other QR Code on the Paper Drip.</p>
+        <p>To share your own message, scan this QR Code</p>
+        <img src="./Images/FormQRCODE.png" alt="QRCode">
     </div>
     <p>Messages submitted from the community</p>
 </header>
