--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>To share your own message, scan this QR Code</p>
         <img src="./Images/FormQRCODE.png" alt="QRCode">
     </div>
-    <p>Messages submitted from the communiy</p>
+    <p>Messages submitted from the community</p>
 </header>
 
 <!-- Filters -->
