--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         Send Drip a message of love, keep his soul alive.</p>
 
         <p>To share your own message, scan this QR Code</p>
-        <img src="./Images/FormQRCODE.png" alt="QRCode">
+        <img src="./Images/FormQRCODE.png" alt="QRCode" style="width: 100%; height: 100%; object-fit: contain;">
     </div>
     <p>Messages submitted from the community</p>
 </header>
