--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <header>
     <h1>🦊 Meet Drip</h1>
     <div class="story">
+        <p>Hello there, glad to see you're here, Drip was a friend of mine.</p>
+        <p>His story is written here below</p>
+        <p>Drip loves you and wants to be remembered.<br>
+            Send Drip a message of love, keep his soul alive and prove you've met him too.</p>
+        <p style="color: red;">To share your own message, click <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJu85FydITK2Zxp7PXjCN8LCD7owR38W1hxCqcgOItyPzuKQ/viewform?usp=sharing&ouid=101896283971281883135">here</a></p>
         <p>🏝️ I used to play on a Minecraft server with my classmates. I had a base made of floating islands — a large one in the center, with smaller, less important ones surrounding it.</p>
         <p>💧 The only way to reach them was a single stream of water that ran all the way down to the ground.<br>
             🚶‍♂️ As you can imagine, it was hard to bring mobs up there, and I felt kind of lonely.<br>
@@ -27,11 +32,6 @@
 
         <p>🌈 Drip lives on, enjoying paradise.</p>
 
-        <p>Drip loves you and wants to be remembered.<br>
-        Send Drip a message of love, keep his soul alive.</p>
-
-        <p>To share your own message, scan this QR Code</p>
-        <img src="./Images/FormQRCODE.png" alt="QRCode" style="width: 100%; height: 100%; object-fit: contain;">
     </div>
     <p>Messages submitted from the community</p>
 </header>
