made some words bold

--- a/index.html
+++ b/index.html
@@ -10,27 +10,28 @@
 <header>
     <h1>🦊 Meet Drip</h1>
     <div class="story">
-        <p>Hello there, glad to see you're here, Drip was a friend of mine.</p>
+        <p>Hello there, glad to see you're here, <b>Drip</b> was a friend of mine.</p>
         <p>His story is written here below</p>
-        <p>Drip loves you and wants to be remembered.<br>
-            Send Drip a message of love, keep his soul alive and prove you've met him too.</p>
+        <p><b>Drip</b> loves you and wants to be remembered.<br>
+            Send <b>Drip</b> a message of love, keep his soul alive and prove you've met him too through his <b>origami form</b>.</p>
         <p style="color: red;">To share your own message, click <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJu85FydITK2Zxp7PXjCN8LCD7owR38W1hxCqcgOItyPzuKQ/viewform?usp=sharing&ouid=101896283971281883135">here</a></p>
-        <p>🏝️ I used to play on a Minecraft server with my classmates. I had a base made of floating islands — a large one in the center, with smaller, less important ones surrounding it.</p>
-        <p>💧 The only way to reach them was a single stream of water that ran all the way down to the ground.<br>
-            🚶‍♂️ As you can imagine, it was hard to bring mobs up there, and I felt kind of lonely.<br>
-            🦊 I decided to bring up a companion — I found a fox holding an emerald and jokingly named him Drip.<br>
-            📤 I brought him up the water stream and started building a dedicated island just for him.</p>
+        <p>🏝️ I used to play on a <b>Minecraft server</b> with my classmates. I had a base made of <b>floating islands</b> — a large one in the center, with smaller, less important ones surrounding it.</p>
+        <p>💧 The only way to reach them was a single <b>stream of water</b> that ran all the way down to the ground.<br>
+            🚶‍♂️ As you can imagine, it was hard to bring <b>mobs</b> up there, and I felt kind of lonely.<br>
+            🦊 I decided to bring up a <b>companion</b> — I found a <b>fox</b> holding an <b>emerald</b> and jokingly named him <b>Drip</b>.<br>
+            📤 I brought him up the <b>water stream</b> and started building a dedicated <b>island</b> just for him.</p>
 
-        <p>Sadly, the bridges connecting the islands weren’t very safe, and Drip fell off to his death.</p>
+        <p>Sadly, the <b>bridges</b> connecting the <b>islands</b> weren’t very safe, and <b>Drip</b> fell off to his death.</p>
 
-        <p>🌼 The island I had built for him became a graveyard, with only his tombstone on it.<br>
-            💎 I placed his emerald on the grave, along with a book where everyone wrote a message to Drip.<br>
-            🌟 Drip had been the mascot of the server for its entire life — losing him was a big moment.</p>
+        <p>🌼 The <b>island</b> I had built for him became a <b>graveyard</b>, with only his <b>tombstone</b> on it.<br>
+            💎 I placed his <b>emerald</b> on the <b>grave</b>, along with a <b>book</b> where everyone wrote a message to <b>Drip</b>.<br>
+            🌟 <b>Drip</b> had been the <b>mascot</b> of the <b>server</b> for its entire life — losing him was a big moment.</p>
 
-        <p>👤 To honor him, I took on his name, so he would never be forgotten.<br>
-            💬 I changed my Discord name to Drip, and it has stayed that way ever since.</p>
+        <p>👤 To honor him, I took on his <b>name</b>, so he would never be forgotten.<br>
+            💬 I changed my <b>Discord name</b> to <b>Drip</b>, and it has stayed that way ever since.</p>
 
-        <p>🌈 Drip lives on, enjoying paradise.</p>
+        <p>🌈 <b>Drip</b> lives on, enjoying <b>paradise</b>.</p>
+
 
     </div>
     <p>Messages submitted from the community</p>
